working end to end flow ticket booking

--- a/src/test/resources/locators.properties
+++ b/src/test/resources/locators.properties
@@ -1,5 +1,7 @@
 flight_search_button = #search-button
 login_popup_css = .commonModal__close
+
+#city selection
 from_city_input_css = [id="fromCity"]
 from_input_css = [placeholder="From"]
 select_city_from_xpath = //span[text()='Bengaluru']
@@ -7,3 +9,35 @@ to_city_input_css = [id="toCity"]
 to_input_css = [placeholder="To"]
 select_city_to_xpath = //span[text()='New Delhi']
 search_flight_css = [data-cy="submit"] a
+
+#flight search results
+flight_comparison_popup_xpath = //span[text()='GOT IT']
+fair_lock_container_xpath = //button[text()='OKAY, GOT IT!']
+view_prices_css = .clusterContent > div > div:nth-child(1) >div:nth-child(1) >div:nth-child(2)>div:nth-child(1)>div:nth-child(2)>div>button>span
+
+#fare options
+book_now_css = div.fareFamilyCardWrapper.cta-wrapper.glider-slide.active.visible.left-1 > div.ffCardFooter > div > button:nth-child(2)
+
+
+#traveller input options
+book_without_insurance_xpath = //*[@id="INSURANCE"]/div[4]/div[2]/label/span
+add_traveller_css = #wrapper_ADULT > div.adultListWrapper > div:nth-child(3) > button
+firstname_css = [placeholder="First & Middle Name"]
+lastname_css = [placeholder="Last Name"]
+mobile_no_css = [placeholder="Mobile No"]
+email_css = [placeholder="Email"]
+gender_css = .selectTab > div > label
+state_xpath = //*[@id="dt_state_gst_info"]
+select_state_xpath = //li[text()="Haryana"]
+save_bill_details_css = #BILLING_ADDRESS > div > div.checkboxWithLblWpr > div
+continue_css = #cta_section > button
+
+review_details_css = .detailsPopupFooter > button
+choosing_aisle_popup_css = #SEATS_N_MEALS > div > div.seatBookingOverlayOuter > div > p.seatBookingOverlayCta > span
+seat_id_css = div.flightSeatMatrix > div > div:nth-child(4) > div:nth-child(2) > div
+continue_meal_selection_css = #cta_section > button
+continue_airport_pick_up_drop_css = #cta_section > button
+continue_payment_css = #ACKNOWLEDGE_SECTION > div > button
+payment_options_text_css = div.payment__options__tab > ul > li:nth-child(4) > div > span:nth-child(1)
+payment_options_css =div.payment__options__tab > ul > li
+payment_option_text_css = div > span:nth-child(1)
